[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory"
version = "0.4.0"
description = "Lightweight memory store for AI agents — pure Python, zero dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "xiaona-ai", email = "yangx3852@gmail.com"}]
keywords = ["agent", "memory", "cli", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[tool.setuptools.packages.find]
include = ["agent_memory*"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
